--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
     .container {
       max-width: 600px;
       margin: auto;
-      background: lightgrey;
+      background: white;
       padding: 20px;
       border-radius: 16px;
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
@@ -36,7 +36,7 @@
 
     button {
       background: #009e60;
-      color: grey;
+      color: white;
       border: none;
       cursor: pointer;
       transition: background-color 0.3s;
